feat: add flag to set the client's ip, needed for the correct network interface in Windows